2005-01-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-util.el: Fix copyright years.  Adapt author address.
	(tramp-minor-mode): Mode must toggle.
	
2005-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-util.el (tramp-compile, tramp-recompile): Enable
	`tramp-minor-mode' in buffer "*Compilation*".
	
2004-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-util.el (tramp-minor-mode): New minor mode.  Add it to
	`find-file-hooks'.
	(tramp-minor-mode-map): Respective map.  Add remapping for
	`compile' and `recompile'.
	(tramp-recompile): New defun.

2004-12-19    <kgrossjo@eu.uu.net>

	* tramp.el (tramp-wait-for-output): Fix typo in echo processing.

2004-12-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-buffer, tramp-get-debug-buffer): Discard the
	undo list of both Tramp buffer and debug buffer.  Reported by
	Joakim Verona <joakim@verona.se>

2004-12-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation): Mark `shell-command'
	as magic for Emacs only.
	(tramp-wait-for-output): Fix error in deleting region.  From Kai
	Grossjohann <kai.grossjohann@gmx.net>.

	* tramp-vc.el (tramp-vc-do-command, tramp-vc-do-command-new)
	(tramp-vc-simple-command): Call `tramp-handle-shell-command' but
	`shell-command', because it isn't magic in XEmacs.  Reported by
	Adrian Aichner <adrian@xemacs.org>.

2004-12-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-file-name-handler-alist): Add entry for
	`substitute-in-file-name.
	(tramp-smb-handle-substitute-in-file-name): New defun.
	(tramp-smb-advice-PC-do-completion): Delete advice.

2004-07-06  Kai Grossjohann  <kgrossjo@eu.uu.net>

	Sync with trunk (Michael Albinus <michael.albinus@gmx.de>).

	* tramp.el (tramp-handle-file-newer-than-file-p): Reverse logic.
	From Andrew J. Korty <ajk@iu.edu>.

2004-12-16  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.46 released.

2004-12-05  Michael Albinus  <michael.albinus@gmx.de>
